Enhance CORS and update request matchers
Updated CORS configuration to allow all headers and exposed headers for Authorization, Link, and X-Total-Count. Modified request matchers for public access to include API versioning.