@@ -4,6 +4,7 @@ import com.everywhere.backend.security.*;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
@@ -19,9 +20,9 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.http.HttpMethod;
 
-import java.util.Arrays; 
+import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @RequiredArgsConstructor
@@ -45,12 +46,14 @@ public class WebSecurityConfig {
                 "http://localhost:4200",
                 "https://*.vercel.app",
                 "https://travel-l1ist.online",
+                "https://www.travel-l1ist.online",
                 "https://*.travel-l1ist.online",
                 "https://*.eddyacv.dev",
                 "https://everywheretravel.eddyacv.dev"
         ));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept", "Origin", "X-Requested-With"));
+        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setExposedHeaders(List.of("Authorization", "Link", "X-Total-Count"));
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
 
@@ -63,8 +66,6 @@ public class WebSecurityConfig {
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                // CSRF desactivado: JWT viaja en header Authorization, no en cookies.
-                // Si se migra a cookies, HABILITAR CSRF obligatoriamente.
                 .csrf(AbstractHttpConfigurer::disable)
                 .headers(headers -> headers
                         .contentTypeOptions(Customizer.withDefaults())
@@ -77,34 +78,20 @@ public class WebSecurityConfig {
                 )
 
                 .authorizeHttpRequests(authorize -> authorize
-                        // Permitir acceso público a las rutas de login, registro y health
-                        .requestMatchers("/auth/**").permitAll()
-                        .requestMatchers("/health").permitAll()
-                        // Swagger / OpenAPI - todas las rutas necesarias
-                        .requestMatchers("/swagger-ui.html").permitAll()
-                        .requestMatchers("/swagger-ui/**").permitAll()
-                        .requestMatchers("/v3/api-docs/**").permitAll()
-                        .requestMatchers("/api-docs/**").permitAll()
-                        .requestMatchers("/swagger-resources/**").permitAll()
-                        .requestMatchers("/webjars/**").permitAll()
+                        // Soporta rutas con y sin el prefijo /api/v1
+                        .requestMatchers("/api/v1/auth/**", "/auth/**").permitAll()
+                        .requestMatchers("/api/v1/health", "/health").permitAll()
+                        // Swagger / OpenAPI
+                        .requestMatchers("/swagger-ui.html", "/swagger-ui/**", "/v3/api-docs/**", "/api-docs/**", "/swagger-resources/**", "/webjars/**").permitAll()
                         .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-                        // Cualquier otra solicitud requiere autenticación (JWT u otra autenticación configurada)
                         .anyRequest().authenticated()
                 )
 
-                // Permite la autenticación básica (para testing con Postman, por ejemplo)
-                //.httpBasic(Customizer.withDefaults())
-                // Desactiva el formulario de inicio de sesión predeterminado, ya que se usará JWT
                 .formLogin(AbstractHttpConfigurer::disable)
-                // Configura el manejo de excepciones para autenticación. Usa JwtAuthenticationEntryPoint para manejar errores 401 (no autorizado)
                 .exceptionHandling(e -> e.authenticationEntryPoint(jwtAuthenticationEntryPoint))
-                // Configura la política de sesiones como "sin estado" (stateless), ya que JWT maneja la autenticación, no las sesiones de servidor
                 .sessionManagement(h -> h.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                // Agrega la configuración para JWT en el filtro antes de los filtros predeterminados de Spring Security
                 .with(new JWTConfigurer(tokenProvider), Customizer.withDefaults());
 
-        // Añadir el JWTFilter antes del filtro de autenticación de nombre de usuario/contraseña.
-        //  Esto permite que el JWTFilter valide el token antes de la autenticación
         http.addFilterBefore(jwtRequestFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
@@ -112,13 +99,11 @@ public class WebSecurityConfig {
 
     @Bean
     public AuthenticationManager authenticationManager(AuthenticationConfiguration authenticationConfiguration) throws Exception {
-        // Proporciona el AuthenticationManager que gestionará la autenticación basada en los detalles de usuario y contraseña
         return authenticationConfiguration.getAuthenticationManager();
     }
 
     @Bean
     public WebSecurityCustomizer webSecurityCustomizer() {
-        // Ignora completamente la cadena de seguridad para las rutas de Swagger/OpenAPI
         return (web) -> web.ignoring().requestMatchers(
                 "/swagger-ui.html",
                 "/swagger-ui/**",
@@ -128,5 +113,4 @@ public class WebSecurityConfig {
                 "/webjars/**"
         );
     }
-
 }
